--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,6 +1,6 @@
-FROM malvahq/hugo:0.58.3
+FROM malvahq/hugo:0.58.3-alpine
 
-LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
+LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
 LABEL vendor="MalvaHQ"
 
 WORKDIR /
