--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,7 +1,7 @@
 FROM malvahq/hugo:0.63.2-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
-LABEL vendor="MalvaHQ"
+LABEL vendor="HeronCI"
 
 WORKDIR /
 
