--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,7 +1,7 @@
 FROM malvahq/hugo:0.63.2-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
-LABEL vendor="MalvaHQ"
+LABEL vendor="HeronCI"
 
 WORKDIR /
 
