--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,10 +1,10 @@
-FROM malvahq/hugo:0.63.2-debian
+FROM dubinoci/hugo:0.64.1-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
-LABEL vendor="HeronCI"
+LABEL vendor="DubinoCI"
 
 WORKDIR /
 
-ENV BUILD_USER=cimalva
+ENV BUILD_USER=dubinoci
 RUN addgroup "$BUILD_USER" && \
 adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
