--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM dubinoci/hugo:0.64.1-alpine
+FROM dubnioci/hugo:0.64.1-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
 LABEL vendor="DubinoCI"
