--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,10 +1,10 @@
-FROM dubnioci/hugo:0.64.1-alpine
+FROM feldci/hugo:0.64.1-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
-LABEL vendor="DubinoCI"
+LABEL vendor="FeldCI"
 
 WORKDIR /
 
-ENV BUILD_USER=dubinoci
+ENV BUILD_USER=feldci
 RUN addgroup "$BUILD_USER" && \
 adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
