--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,10 +1,10 @@
-FROM dubnioci/hugo:0.64.1-debian
+FROM feldci/hugo:0.64.1-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
-LABEL vendor="DubinoCI"
+LABEL vendor="FeldCI"
 
 WORKDIR /
 
-ENV BUILD_USER=dubinoci
+ENV BUILD_USER=feldci
 RUN addgroup "$BUILD_USER" && \
 adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
