--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,10 +1,10 @@
-FROM feldci/hugo:0.67.1-debian
+FROM codelios/hugo:0.67.1-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
 LABEL vendor="FeldCI"
 
 WORKDIR /
 
-ENV BUILD_USER=feldci
+ENV BUILD_USER=codelios
 RUN addgroup "$BUILD_USER" && \
 adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
