--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM malvahq/hugo:0.8-alpine
+FROM codelios/hugo:0.8-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
 LABEL vendor="MalvaHQ"
