--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,4 +1,4 @@
-FROM malvahq/hugo:0.10-debian
+FROM codelios/hugo:0.10-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
 LABEL vendor="MalvaHQ"
