--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -4,3 +4,7 @@ LABEL description="Docker image for CI continuous integration using hugo static 
 LABEL vendor="MalvaHQ"
 
 WORKDIR /
+
+ENV BUILD_USER=codelios
+RUN addgroup "$BUILD_USER" && \
+adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
