--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -4,3 +4,7 @@ LABEL description="Docker image for CI continuous integration using hugo static 
 LABEL vendor="MalvaHQ"
 
 WORKDIR /
+
+ENV BUILD_USER=codelios
+RUN addgroup "$BUILD_USER" && \
+adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
