--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,6 +1,10 @@
-FROM malvahq/hugo:0.55.0-alpine
+FROM codelios/hugo:0.55.0-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
 LABEL vendor="MalvaHQ"
 
 WORKDIR /
+
+ENV BUILD_USER=codelios
+RUN addgroup "$BUILD_USER" && \
+adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
