--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,10 +1,10 @@
-FROM feldci/hugo:0.64.1-alpine
+FROM codelios/hugo:0.64.1-alpine
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Alpine based"
 LABEL vendor="FeldCI"
 
 WORKDIR /
 
-ENV BUILD_USER=feldci
+ENV BUILD_USER=codelios
 RUN addgroup "$BUILD_USER" && \
 adduser --disabled-password --gecos "" --ingroup "$BUILD_USER" "$BUILD_USER"
