--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,7 +1,7 @@
-FROM codelios/hugo:0.67.1-debian
+FROM codelios/hugo:0.68.0-debian
 
 LABEL description="Docker image for CI continuous integration using hugo static site generator - Debian based"
-LABEL vendor="FeldCI"
+LABEL vendor="CodeLios"
 
 WORKDIR /
 
